--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,17 +1,31 @@
-.home{
-    display: flex;
+.home {
+  display: flex;
 
-    .homeContainer{
-        flex: 6;
+  .homeContainer {
+    flex: 6;
 
-        .widgets,
-        .charts{
-            display: flex;
-            padding: 20px;
-            gap: 20px;
-        }
-        .charts{
-            padding: 5px 20px;
-        }
+    .widgets,
+    .charts {
+      display: flex;
+      padding: 20px;
+      gap: 20px;
     }
+    .charts {
+      padding: 5px 20px;
+    }
+
+    .listContainer {
+      -moz-box-shadow: 8px 8px 5px -2px rgba(0, 0, 0, 0.29);
+      box-shadow: 8px 8px 5px -2px rgba(0, 0, 0, 0.29);
+      webkit-box-shadow: 8px 8px 5px -2px rgba(0, 0, 0, 0.29);
+      padding: 20px;
+      margin: 20px;
+
+      .listTitle{
+        font-weight: 500;
+        color: #0e3b43;
+        margin-bottom: 15px;
+      }
+    }
+  }
 }
