--- a/src/components/Chart/chart.scss
+++ b/src/components/Chart/chart.scss
@@ -1,13 +1,12 @@
 .chart{
     flex: 4;
     color: #0e3b43;
-    -webkit-box-shadow: 8px 8px 5px -2px rgba(0,0,0,0.29);
-    -moz-box-shadow: 8px 8px 5px -2px rgba(0,0,0,0.29);
-    box-shadow: 8px 8px 5px -2px rgba(0,0,0,0.29);
+
     padding: 10px;
 
     .title{
         text-align: center;
+        color: #0e3b43;
     }
 
     .grid{
