--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,6 +1,32 @@
 .dataTable {
     height: 600px;
     padding: 20px;
+
+    .datatableTitle{
+      width: 100%;
+      color: #0e3b43;
+      font-size: 20px;
+      font-weight: bold;
+      
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-left: 20px;
+
+  
+      .link{
+        text-decoration: none;
+        color: green;
+        font-size: 16px;
+        font-weight: 400;
+        border: 1px solid green;
+        padding: 5px;
+        border-radius: 5px;
+        margin-right: 30px;
+        cursor: pointer;
+      }
+    }
     
     .cellWithImg {
     display: flex;
